@@ -1,6 +1,8 @@
 
 2.2.2 (Unreleased)
   - Prevent _namemapper.c from segfaulting when PyImport_ImportModule fails for some reason (Bogdano Arendartchuk <debogdano@gmail.com>)
+  - Removal of the contrib/markdown module (in favor of a setuptools dependency)
+  - Default setup.py to use setuptools by default, failing that, fall back to distutils
 
 2.2.1 (June 1st, 2009)
   - 0000020: [Templates] Builtin support for using Cheetah with Django (rtyler) 
